crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@157.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'FMIYYY FMIYY FMIY FMI FMIW FMIDDD FMID')\n   FROM TIMESTAMPTZ_TBL;"
---
SelectStmt@0..85
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..59
        Sconst@19..59 "'FMIYYY FMIYY FMIY FM ..."
  Ascii41@59..60 ")"
  Newline@60..61 "\n"
  Whitespace@61..64 "   "
  From@64..68 "FROM"
  Whitespace@68..69 " "
  RangeVar@69..84
    Ident@69..84 "TIMESTAMPTZ_TBL"
  Ascii59@84..85 ";"

