crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@197.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE TIMESTAMPTZ_TST (a int , b timestamptz);"
---
CreateStmt@0..53
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..28
    Ident@13..28 "TIMESTAMPTZ_TST"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  ColumnDef@30..35
    Ident@30..31 "a"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Whitespace@35..36 " "
  Ascii44@36..37 ","
  Whitespace@37..38 " "
  ColumnDef@38..51
    Ident@38..39 "b"
    Whitespace@39..40 " "
    TypeName@40..51
      Ident@40..51 "timestamptz"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

