crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@200.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TST VALUES(3, 'Sat Mar 12 23:58:48 100000 IST');"
---
InsertStmt@0..72
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TST"
  Whitespace@27..28 " "
  SelectStmt@28..70
    Values@28..34 "VALUES"
    Ascii40@34..35 "("
    List@35..70
      AConst@35..36
        Iconst@35..36 "3"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..70
        Sconst@38..70 "'Sat Mar 12 23:58:48  ..."
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

