crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@201.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TST VALUES(3, '10000 Mar 12 23:58:48 IST');"
---
InsertStmt@0..67
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TST"
  Whitespace@27..28 " "
  SelectStmt@28..65
    Values@28..34 "VALUES"
    Ascii40@34..35 "("
    List@35..65
      AConst@35..36
        Iconst@35..36 "3"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..65
        Sconst@38..65 "'10000 Mar 12 23:58:4 ..."
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

